# Mosquitto_TLS_Android

./: .gitmodules  .travis.yml  README.md  mosquitto_android_cmake.sh
openssl/: Readme.md  build.sh
openssl/sources/include/openssl/: opensslconf.h
org.eclipse.mosquitto-1.4.8/: CMakeLists.txt  mosquitto_android_cmake.sh
org.eclipse.mosquitto-1.4.8/lib/: CMakeLists.txt
org.eclipse.mosquitto-1.4.8/lib/cpp/: CMakeLists.txt
org.eclipse.mosquitto-1.4.8/prebuilt/client/: mosquitto_pub  mosquitto_sub
org.eclipse.mosquitto-1.4.8/prebuilt/src/: mosquitto_passwd
org.eclipse.mosquitto-1.4.8/src/: CMakeLists.txt  conf.c
prebuilt/mosquitto-1.4.12/client/: mosquitto_pub  mosquitto_sub
prebuilt/mosquitto-1.4.12/lib/include/: mosquitto.h
prebuilt/mosquitto-1.4.12/src/: mosquitto  mosquitto_passwd
prebuilt/mosquitto-1.4.8/src/: mosquitto
